--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="images/2.jpg" alt="圖片2" class="fullscreen-img">
+    <img src="https://raw.githubusercontent.com/tat454/tat454.github.io/refs/heads/main/images/2.JPG" alt="圖片2" class="fullscreen-img">
     <div class="nav">
         <a href="index.html">1</a>
         <a href="page2.html">2</a>
