--- a/page4.html
+++ b/page4.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="images/4.jpg" alt="圖片4" class="fullscreen-img">
+    <img src="./images/4.jpg" alt="圖片4" class="fullscreen-img">
     <div class="nav">
         <a href="index.html">1</a>
         <a href="page2.html">2</a>
