--- a/page5.html
+++ b/page5.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="images/5.jpg" alt="圖片5" class="fullscreen-img">
+    <img src="./images/5.jpg" alt="圖片5" class="fullscreen-img">
     <div class="nav">
         <a href="index.html">1</a>
         <a href="page2.html">2</a>
