--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>圖片展示 - 第3頁</title>
+    <title>UNIFY-IT- 第3頁</title>
     <meta charset="UTF-8">
     <style>
         /* 與 index.html 相同的 CSS */
