--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>圖片展示 - 第1頁</title>
+    <title>UNIFY-IT</title>
     <meta charset="UTF-8">
     <style>
         body, html {
