--- a/page3.html
+++ b/page3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UNIFY-IT- 第3頁</title>
+    <title>圖片展示 - 第3頁</title>
     <meta charset="UTF-8">
     <style>
         /* 與 index.html 相同的 CSS */
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <img src="https://raw.githubusercontent.com/tat454/tat454.github.io/refs/heads/main/images/3.JPG" alt="圖片3" class="fullscreen-img">
+    <img src="images/3.jpg" alt="圖片3" class="fullscreen-img">
     <div class="nav">
         <a href="index.html">1</a>
         <a href="page2.html">2</a>
